--- a/travel-app/public/index.html
+++ b/travel-app/public/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #4498aa;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
